--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "compile": "tsc"
   },
   "bin": {
-    "unbundle": "./lib/scripts/example.ts"
+    "unbundle-serve": "./lib/server/index.ts",
+    "unbundle-build": "./lib/server/build.ts"
   },
   "exports": {
-    ".": "./lib/index.ts"
+    ".": "./lib/client/index.ts"
   },
   "files": [
     "lib/",
